@@ -61,7 +61,7 @@ queue. Call pygame.event.pump() if you are not using the event queue for
 any input handling. Once a joystick object has been initialized, it will
 start to send joystick events to the input queue.
 <br>&nbsp;<br>
-Be sure to understand the difference between the joystick module
+Be sure to understand there is a difference between the joystick module
 and the Joystick objects.
 
 <hr>
