@@ -71,7 +71,7 @@ that pygame.mixer is initialized to. The current SDL resampling
 functions are not that good, so it is best if you initialize
 pygame.mixer to the same format as your sound resources. Also
 setting the mixer frequency to even multiples of your sound
-resources will result in a clean conversion.
+resources will result in a cleaner conversion.
 <br>&nbsp;<br>
 The mixer also contains a special channel for music. You can
 control the music channel through pygame.mixer.music./
