@@ -1,5 +1,8 @@
 #This is a list of changes in pygame's history.
 
+Dec 13, 2000
+	display.update() is entirely better in many ways [BUG]
+
 Dec 3, 2000
 	fixed timing issues. negative time.delay() will become 0
 
